--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 
@@ -22,35 +22,116 @@
     </nav>
 
     <section class="hero">
-        <div class="left-text">
+        <div class="left-hero">
             <h1>Forget Your Work,</h1>
             <h1>Start your vacation</h1>
             <p>Staycation will give you a different holiday experience, with the concept of staying in a tourist area
                 and enjoying your vacation</p>
             <button type="button" class="btn btn-primary">Go Now</button>
+            <div class="icon">
+                <div class="icon-item">
+                    <img src="./asset/logo/ic_traveller.svg" alt="">
+                    <span>80,657 travellers</span>
+                </div>
+                <div class="icon-item">
+                    <img src="./asset/logo/ic_cities.svg" alt="">
+                    <span>80,450 Cities</span>
+                </div>
+                <div class="icon-item">
+                    <img src="./asset/logo/ic_destinations.svg" alt="">
+                    <span>120,365 Destinations</span>
+                </div>
+            </div>
         </div>
         <div class="right-picture">
             <div class="box-layer-picture">
-                </div>
-                <img src="./img/person.jpg" width="100%"> 
+            </div>
+            <img src="./img/person.jpg" width="100%">
         </div>
     </section>
-    <!-- <div
-        class="py-8 px-8 max-w-sm mx-auto bg-white rounded-xl shadow-lg space-y-2 sm:py-4 sm:flex sm:items-center sm:space-y-0 sm:space-x-6">
-        <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="./img/person.jpg" alt="Woman's Face">
-        <div class="text-center space-y-2 sm:text-left">
-            <div class="space-y-0.5">
-                <p class="text-lg text-black font-semibold">
-                    Erin Lindford
-                </p>
-                <p class="text-slate-500 font-medium">
-                    Product Engineer
-                </p>
+    <section class="most-picked">
+        <h1>Most Picked</h1>
+        <div class="card-parent">
+            <div class="card card-big">
+                <div class="layer"></div>
+                <div class="price">IDR 200.000/night</div>
+                <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                <span class="hotel-name">The Heritage
+                    Solo</span>
+                <span class="hotel-address">Solo, Indonesia</span>
             </div>
-            <button
-                class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Message</button>
+            <div class="card-group">
+                <div class="card">
+                    <div class="layer"></div>
+                    <div class="price">IDR 200.000/night</div>
+                    <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                    <span class="hotel-name">The Heritage
+                        Solo</span>
+                    <span class="hotel-address">Solo, Indonesia</span>
+                </div>
+                <div class="card">
+                    <div class="layer"></div>
+                    <div class="price">IDR 200.000/night</div>
+                    <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                    <span class="hotel-name">The Heritage Solo</span>
+                    <span class="hotel-address">Solo, Indonesia</span>
+                </div>
+                <div class="card">
+                    <div class="layer"></div>
+                    <div class="price">IDR 200.000/night</div>
+                    <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                    <span class="hotel-name">The Heritage Solo</span>
+                    <span class="hotel-address">Solo, Indonesia</span>
+                </div>
+                <div class="card">
+                    <div class="layer"></div>
+                    <div class="price">IDR 200.000/night</div>
+                    <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                    <span class="hotel-name">The Heritage Solo</span>
+                    <span class="hotel-address">Solo, Indonesia</span>
+                </div>
+            </div>
         </div>
-    </div> -->
+
+
+    </section>
+
+    <section class="most-picked">
+        <h1>House With Backyard</h1>
+        <div class="card-group">
+            <div class="card">
+                <div class="layer"></div>
+                <div class="price">IDR 200.000/night</div>
+                <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                <span class="hotel-name">The Heritage
+                    Solo</span>
+                <span class="hotel-address">Solo, Indonesia</span>
+            </div>
+            <div class="card">
+                <div class="layer"></div>
+                <div class="price">IDR 200.000/night</div>
+                <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                <span class="hotel-name">The Heritage Solo</span>
+                <span class="hotel-address">Solo, Indonesia</span>
+            </div>
+            <div class="card">
+                <div class="layer"></div>
+                <div class="price">IDR 200.000/night</div>
+                <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                <span class="hotel-name">The Heritage Solo</span>
+                <span class="hotel-address">Solo, Indonesia</span>
+            </div>
+            <div class="card">
+                <div class="layer"></div>
+                <div class="price">IDR 200.000/night</div>
+                <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
+                <span class="hotel-name">The Heritage Solo</span>
+                <span class="hotel-address">Solo, Indonesia</span>
+            </div>
+        </div>
+
+
+    </section>
 
 
 </body>
