[UPDATE] done slicing

--- a/src/booking-1.html
+++ b/src/booking-1.html
@@ -17,17 +17,78 @@
         <h1 class="text-primary">Stay<span class="text-primary-variant">cation.</span></h1>
     </nav>
     <section>
-        <div class="flex justify-center">
-            <div class="border-2 w-10 h-10 rounded-full">
-                <div class="bg-secondary-variant w-8 h-8 rounded-full justify-center items-center"> </div>
+        <div class="table m-auto text-secondary">
+            <div class="table-cell align-middle border-2 w-12 h-12 rounded-full">
+                <div class="m-auto leading-10 bg-secondary w-10 h-10 rounded-full text-center text-secondary-variant">
+                    1 </div>
             </div>
-            <svg class="w-100 h-10 " fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            <svg class="w-12 h-12 " fill="none" stroke="currentColor" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"></path>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M23 12H1"></path>
             </svg>
-            <div class="bg-secondary-variant w-10 h-10 rounded-full"> </div>
+            <div class="table-cell align-middle bg-secondary w-12 h-12 rounded-full text-center text-secondary-variant">
+                2
+            </div><svg class="w-12 h-12" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M23 12H1"></path>
+            </svg>
+            <div class="table-cell align-middle bg-secondary w-12 h-12 rounded-full text-center text-secondary-variant">
+                3
+            </div>
 
-            <div class="bg-secondary-variant w-10 h-10 rounded-full"> </div>
+        </div>
+        <div class="text-center mt-16 leading-10">
+            <h1>Booking Information</h1>
+            <span>Please fill up the blank field now</span>
+        </div>
+        <div class="grid grid-cols-2 mt-14">
+            <div class="flex justify-center items-center border-r-2 h-96">
+                <div class="card-outside w-1/2">
+                    <div class="card-image">
+                        <div class="layer"></div>
+                        <img src="./img/saad-khan-425b2PhNuHA-unsplash.jpg" alt="">
+                    </div>
+                    <div class="flex ">
+                        <div class="flex-40">
+                            <span class="hotel-name">La Vie Villa</span>
+                            <span class="hotel-address">Madrid, Spain</span>
+                        </div>
+                        <div class="flex-60 flex justify-end items-center"><span class="text-primary-variant"><b>IDR
+                                    560.000</b>
+                                per <b>2 nights</b></span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="pl-16 flex justify-center flex-col gap-4">
+                <div class="w-96">
+                    <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First
+                        name</label>
+                    <input type="text" id="first_name"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="First Name" required>
+                </div>
+                <div class="w-96">
+                    <label for="last_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last
+                        name</label>
+                    <input type="text" id="last_name"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="Last Name" required>
+                </div>
+                <div class="w-96">
+                    <label for="email"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
+                    <input type="text" id="email"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="Your Email" required>
+                </div>
+            </div>
+
+        </div>
+        <div class="flex flex-col justify-center items-center">
+            <button type="submit" class="btn btn-primary"><a href="./booking-2.html">Continue to Book</a></button>
+            <button type="submit" class="btn btn-secondary w-[296px]">Cancel</button>
         </div>
 
     </section>
