--- a/src/details.html
+++ b/src/details.html
@@ -173,9 +173,9 @@
     </section>
 
     <section class="house">
-        <h1>International Choice</h1>
+        <h3>International Choice</h3>
         <div class="card-group">
-            <div class="card">
+            <div class="card-outside">
                 <div class="card-image">
                     <div class="layer"></div>
                     <div class="price">Popular Choice</div>
@@ -184,15 +184,17 @@
                 <span class="hotel-name">La Vie Villa</span>
                 <span class="hotel-address">Madrid, Spain</span>
             </div>
-            <div class="card">
-                <div class="card-image">
-                    <div class="layer"></div>
-                    <img src="./img/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg" alt="">
+            <a href="./details.html">
+                <div class="card-outside">
+                    <div class="card-image">
+                        <div class="layer"></div>
+                        <img src="./img/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg" alt="">
+                    </div>
+                    <span class="hotel-name">Khayangan Kemenuh by Premier Hospitality Asia</span>
+                    <span class="hotel-address">Bangkok, Thailand</span>
                 </div>
-                <span class="hotel-name">Khayangan Kemenuh by Premier Hospitality Asia</span>
-                <span class="hotel-address">Bangkok, Thailand</span>
-            </div>
-            <div class="card">
+            </a>
+            <div class="card-outside">
                 <div class="card-image">
                     <div class="layer"></div>
                     <img src="./img/0cbacb07-1369-4eac-a8cd-67f56a04494d-1603885212559-78723b4fe9509d68e87035e0b2d8caeb.webp"
@@ -201,7 +203,7 @@
                 <span class="hotel-name">The Jas Villas</span>
                 <span class="hotel-address">Paris, France</span>
             </div>
-            <div class="card">
+            <div class="card-outside">
                 <div class="card-image">
                     <div class="layer"></div>
                     <img src="./img/4a657d03-6832-42c8-966c-aa337790315f-1615552627483-b0195bdf3a14d722ee0a204529af7a70.webp"
