--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <section class="most-picked">
         <h3>Most Picked</h3>
         <div class="card-parent">
-            <div class="card card-big">
+            <div class="card-inside card-big">
                 <div class="layer"></div>
                 <div class="price">IDR 11.243.500/night</div>
                 <img src="./img/kelsey-curtis--27u_GzlAFw-unsplash.jpg" alt="">
@@ -63,35 +63,35 @@
                 <span class="hotel-address">Solo, Indonesia</span>
             </div>
             <div class="card-group">
-                <div class="card">
+                <div class="card-inside">
                     <div class="layer"></div>
                     <div class="price">IDR 9.179.000/night</div>
                     <img src="./img/edvin-johansson-rlwE8f8anOc-unsplash.jpg" alt="">
                     <span class="hotel-name">The Samaya Ubud</span>
                     <span class="hotel-address">Bali, Indonesia</span>
                 </div>
-                <div class="card">
+                <div class="card-inside">
                     <div class="layer"></div>
                     <div class="price">IDR 3.759.280/night</div>
                     <img src="./img/francesca-saraco-_dS27XGgRyQ-unsplash.jpg" alt="">
                     <span class="hotel-name">Berry Amour Romantic Villas</span>
                     <span class="hotel-address">Milan, Italia</span>
                 </div>
-                <div class="card">
+                <div class="card-inside">
                     <div class="layer"></div>
                     <div class="price">IDR 3.600.000/night</div>
                     <img src="./img/sasha-kaunas-xEaAoizNFV8-unsplash.jpg" alt="">
                     <span class="hotel-name">Maca Villas and Spa Umalas</span>
                     <span class="hotel-address">Bali, Indonesia</span>
                 </div>
-                <div class="card">
+                <div class="card-inside">
                     <div class="layer"></div>
                     <div class="price">IDR 2.388.572/night</div>
                     <img src="./img/ralph-ravi-kayden-FqqiAvJejto-unsplash.jpg" alt="">
                     <span class="hotel-name">The Sterling Hotel and Villas</span>
                     <span class="hotel-address">Munich, Germany</span>
                 </div>
-                <div class="card">
+                <div class="card-inside">
                     <div class="layer"></div>
                     <div class="price">IDR 1.686.747/night</div>
                     <img src="./img/39c0acf9-d24d-488d-afff-58c9819b438b-1604155311321-a5cc492137733a9fe2351dc1a279239c.webp"
@@ -99,7 +99,7 @@
                     <span class="hotel-name">Bajra Bali Villa Seminyak</span>
                     <span class="hotel-address">Bali, Indonesia</span>
                 </div>
-                <div class="card">
+                <div class="card-inside">
                     <div class="layer"></div>
                     <div class="price">IDR 1.021.698/night</div>
                     <img src="./img/6083ea34-4114-483a-93ad-101ac5e57a3b-1615551740908-40657741bae84473d31caf635ab77e3f.webp"
@@ -115,7 +115,7 @@
     <section class="house">
         <h3>International Choice</h3>
         <div class="card-group">
-            <div class="card">
+            <div class="card-outside">
                 <div class="card-image">
                     <div class="layer"></div>
                     <div class="price">Popular Choice</div>
@@ -125,7 +125,7 @@
                 <span class="hotel-address">Madrid, Spain</span>
             </div>
             <a href="./details.html">
-                <div class="card">
+                <div class="card-outside">
                     <div class="card-image">
                         <div class="layer"></div>
                         <img src="./img/vojtech-bruzek-Yrxr3bsPdS0-unsplash.jpg" alt="">
@@ -134,7 +134,7 @@
                     <span class="hotel-address">Bangkok, Thailand</span>
                 </div>
             </a>
-            <div class="card">
+            <div class="card-outside">
                 <div class="card-image">
                     <div class="layer"></div>
                     <img src="./img/0cbacb07-1369-4eac-a8cd-67f56a04494d-1603885212559-78723b4fe9509d68e87035e0b2d8caeb.webp"
@@ -143,7 +143,7 @@
                 <span class="hotel-name">The Jas Villas</span>
                 <span class="hotel-address">Paris, France</span>
             </div>
-            <div class="card">
+            <div class="card-outside">
                 <div class="card-image">
                     <div class="layer"></div>
                     <img src="./img/4a657d03-6832-42c8-966c-aa337790315f-1615552627483-b0195bdf3a14d722ee0a204529af7a70.webp"
